--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,19 +1,35 @@
 pipeline{
     agent any
     stages{
-        stage('checkout'){
+        stage('clone'){
             steps{
-                checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/Venna12/taxi-booking.git']])
+                checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/Kolla5233/dockerjenkin.git']])
             }
         }
-        stage('Build'){
+        stage('build'){
             steps{
-                sh "mvn package"
+                sh 'mvn package'
             }
         }
-        stage('Deploy to tomcat'){
+        stage('sonar'){
             steps{
-                deploy adapters: [tomcat9(credentialsId: '527db3ea-545b-436b-bcbd-3c786d08d357', path: '', url: 'http://3.137.216.135:8080/')], contextPath: 'goutham', war: '**/*.war'
+                sh 'mvn clean verify sonar:sonar -Dsonar.projectKey=testingthegitfile -Dsonar.host.url=http://54.175.203.143:9000 -Dsonar.login=sqp_6d533ead8394aebbaff63c6edbec2891e84643dc0'
+            }
+        }
+        stage('nexus'){
+            steps{
+                nexusArtifactUploader artifacts: [[artifactId: 'maven-project', classifier: '', file: '/var/lib/jenkins/workspace/dockerimagepush/target/java-tomcat-maven-example.war', type: 'war']], credentialsId: 'nexus', groupId: 'com.example.maven-project', nexusUrl: '54.175.7.70:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-snapshots', version: '1.0-SNAPSHOT'
+            }
+        }
+        stage('docker build & push'){
+            steps
+            {
+                script{
+                    withDockerRegistry(credentialsId: 'docker') {
+                        sh 'docker build -t 9573598280/myimage2:v1.0.1 .'
+                        sh 'docker push 9573598280/myimage2:v1.0.1'
+                    }
+                }
             }
         }
     }
