--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,12 +13,12 @@ pipeline{
         }
         stage('sonar'){
             steps{
-                sh 'mvn clean verify sonar:sonar -Dsonar.projectKey=testingthegitfile -Dsonar.host.url=http://54.175.203.143:9000 -Dsonar.login=sqp_6d533ead8394aebbaff63c6edbec2891e84643dc0'
+                sh 'mvn clean verify sonar:sonar -Dsonar.projectKey=testingthecode -Dsonar.host.url=http://52.91.163.11:9000 -Dsonar.login=sqp_d3b8c532cce6035c74411005b3f9f16c79f78c85'
             }
         }
         stage('nexus'){
             steps{
-                nexusArtifactUploader artifacts: [[artifactId: 'maven-project', classifier: '', file: '/var/lib/jenkins/workspace/dockerimagepush/target/java-tomcat-maven-example.war', type: 'war']], credentialsId: 'nexus', groupId: 'com.example.maven-project', nexusUrl: '54.175.7.70:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-snapshots', version: '1.0-SNAPSHOT'
+                nexusArtifactUploader artifacts: [[artifactId: 'maven-project', classifier: '', file: '/var/lib/jenkins/workspace/dockerimagepush/taxi-booking/target/taxi-booking-1.0.1.war', type: 'war']], credentialsId: 'nexus', groupId: 'com.example.maven-project', nexusUrl: '34.205.20.44:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-snapshots', version: '1.0-SNAPSHOT'
             }
         }
         stage('docker build & push'){
@@ -26,8 +26,8 @@ pipeline{
             {
                 script{
                     withDockerRegistry(credentialsId: 'docker') {
-                        sh 'docker build -t 9573598280/myimage2:v1.0.1 .'
-                        sh 'docker push 9573598280/myimage2:v1.0.1'
+                        sh 'docker build -t 9573598280/myimage3:v1.0.12 .'
+                        sh 'docker push 9573598280/myimage3:v1.0.12'
                     }
                 }
             }
